-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.2
-
None
-
docker nvidia/cuda 12.9.1-devel-ubuntu24.04
-
-
b0d9b0ff3 (dev), cc39c0dcd (6.10), 6f56af25d (6.9), 164c9df7d (tqtc/lts-6.8)
Hi, I have some issue to compile some cuda library depending on qt with nvcc compiler in a docker nvidia/cuda 12.9.1-devel-ubuntu24.04
I have to add explicitely the type 'QBasicAtomicInt' in qqmlprivate.h to make all compile.
/opt/Qt/6.8.2/gcc_64/include/QtQml/qqmlprivate.h: In function 'constexpr QtPrivate::QMetaTypeInterface QQmlPrivate::metaTypeForNamespace(const QMetaObject* (* const&)(const QtPrivate::QMetaTypeInterface*), const char*)':
/opt/Qt/6.8.2/gcc_64/include/QtQml/qqmlprivate.h:1124:163: error: could not convert '{0, 0, 0, 0, metaObjectFunction, name, nullptr, nullptr, nullptr, nullptr, nullptr, nullptr, nullptr, nullptr, nullptr, nullptr}' from '<brace-enclosed initializer list>' to 'QtPrivate::QMetaTypeInterface'
if I replace
return { /*.revision=*/ 0, /*.alignment=*/ 0, /*.size=*/ 0, /*.flags=*/ 0, /*.typeId=*/ {}, /*.metaObject=*/ metaObjectFunction, /*.name=*/ name, /*.defaultCtr=*/ nullptr, /*.copyCtr=*/ nullptr, /*.moveCtr=*/ nullptr, /*.dtor=*/ nullptr, /*.equals*/ nullptr, /*.lessThan*/ nullptr, /*.debugStream=*/ nullptr, /*.dataStreamOut=*/ nullptr, /*.dataStreamIn=*/ nullptr, /*.legacyRegisterOp=*/ nullptr };
by
return { /*.revision=*/ 0, /*.alignment=*/ 0, /*.size=*/ 0, /*.flags=*/ 0, /*.typeId=*/ QBasicAtomicInt{}, /*.metaObject=*/ metaObjectFunction, /*.name=*/ name, /*.defaultCtr=*/ nullptr, /*.copyCtr=*/ nullptr, /*.moveCtr=*/ nullptr, /*.dtor=*/ nullptr, /*.equals*/ nullptr, /*.lessThan*/ nullptr, /*.debugStream=*/ nullptr, /*.dataStreamOut=*/ nullptr, /*.dataStreamIn=*/ nullptr, /*.legacyRegisterOp=*/ nullptr };
it compile well.
Qt version used installed by :
qtVer="682"
/qt-unified-linux-x64-4.6.1-online.run --root /opt/Qt --accept-licenses --default-answer --confirm-command install qt.qt6.$qtVer.linux_gcc_64 extensions.qtwebengine.$qtVer.linux_gcc_64 qt.qt6.$qtVer.addons.qtwebchannel qt.qt6.$qtVer.addons.qthttpserver qt.qt6.$qtVer.wasm_singlethread qt.qt6.$qtVer.addons.qtmultimedia qt.qt6.$qtVer.addons.qtpositioning extensions.qtpdf.$qtVer.linux_gcc_64 qt.qt6.$qtVer.addons.qtconnectivity --accept-obligations --email xxxxxx --pw xxxxxx
| For Gerrit Dashboard: QTBUG-138053 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 656814,2 | QML: Work around nvcc compiler bug | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 657053,2 | QML: Work around nvcc compiler bug | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 657105,2 | QML: Work around nvcc compiler bug | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 657134,2 | QML: Work around nvcc compiler bug | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |