QML: Work around nvcc compiler bug

We can name the QBasicAtomicInt() in the initialization of
QMetaTypeInterface.

Fixes: QTBUG-138053
Change-Id: I32bf67a1ff984ed3992afcd3c945d7e97f643068
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit b0d9b0ff37ad9d08ec75257ca76ee964803f5659)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit cc39c0dcd5e7a043a259b0e75e1cd7a39552a13b)
(cherry picked from commit 6f56af25d3fa6f1bcee3c46c3089f172f04d9231)